[SW-1548][FollowUp] Move all pysparkling source files into single src dir (#1460)

--- a/py/build.gradle
+++ b/py/build.gradle
@@ -143,6 +143,7 @@ def copyPySetup() {
         from("$projectDir/src") {
             include 'MANIFEST.in'
             include 'setup.cfg'
+            include 'setup.py'
             include 'pysparkling/**/*'
             include 'ai/**/*'
             exclude '**/*.pyc'
