[SW-1548][FollowUp] Move all pysparkling source files into single src dir (#1460)
(cherry picked from commit 36bdd8f74746052cbd36e8cb50cf2908cd66b042)

--- a/py/build.gradle
+++ b/py/build.gradle
@@ -120,7 +120,7 @@ export H2O_EXTENDED_JAR=`./gradlew -q extendJar -PdownloadH2O`
 def copyPySetup() {
 
     copy {
-        from("$projectDir") {
+        from("$projectDir/src") {
             include 'setup.py'
         }
         filter {
@@ -143,7 +143,6 @@ def copyPySetup() {
         from("$projectDir/src") {
             include 'MANIFEST.in'
             include 'setup.cfg'
-            include 'setup.py'
             include 'pysparkling/**/*'
             include 'ai/**/*'
             exclude '**/*.pyc'
