--- a/gradle.properties
+++ b/gradle.properties
@@ -24,4 +24,4 @@ supportedSparkVersions=2.1 2.2 2.3 2.4
 # Select for which Spark version is Sparkling Water built by default
 spark=2.4
 # Sparkling Water Version
-version=3.26.3
+version=3.26.4-SNAPSHOT
