--- a/ml/build.gradle
+++ b/ml/build.gradle
@@ -14,6 +14,9 @@ dependencies {
     compileOnly "org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}"
     testCompile "org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}"
 
+    // Dependency for Target Encoder
+    compile "ai.h2o:h2o-ext-target-encoder:${h2oVersion}"
+
     // And Scala library
     compile "org.scala-lang:scala-library:${scalaVersion}"
 
