--- a/templates/build.gradle
+++ b/templates/build.gradle
@@ -14,7 +14,7 @@ task substituteAWS() {
         def contents = file(aws_script).getText('UTF-8')
 
         contents = contents
-                .replaceAll("SUBST_SW_VERSION", version)
+                .replaceAll("SUBST_SW_VERSION", version.toString())
                 .replaceAll("SUBST_SPARK_MAJOR_VERSION", sparkMajorVersion)
                 .replaceAll("SUBST_S3_PATH", getS3Path())
 
@@ -25,11 +25,14 @@ task substituteAWS() {
 task substituteTerraform() {
     doLast {
         def tfBaseDir = "${project.buildDir.toString()}/terraform/aws/"
-        def tfScripts = ["${tfBaseDir}/variables.tf", "${tfBaseDir}/modules/emr/variables.tf", "${tfBaseDir}/modules/emr/main.tf"]
+        def tfScripts = [
+            "${tfBaseDir}/variables.tf",
+            "${tfBaseDir}/modules/emr_deployment/variables.tf",
+            "${tfBaseDir}/modules/emr_deployment/main.tf"]
         tfScripts.each { path ->
             def contents = file(path).getText('UTF-8')
             contents = contents
-                    .replaceAll("SUBST_SW_VERSION", version)
+                    .replaceAll("SUBST_SW_VERSION", version.toString())
                     .replaceAll("SUBST_EMR_VERSION", supportedEmrVersion)
                     .replaceAll("SUBST_SPARK_MAJOR_VERSION", sparkMajorVersion)
                     .replaceAll("SUBST_S3_PATH", getS3Path())
