--- a/doc/build.gradle
+++ b/doc/build.gradle
@@ -34,7 +34,6 @@ task substitute() {
                 def contents = file(it).getText('UTF-8')
                 contents = contents
                         .replaceAll("SUBST_SW_VERSION", version)
-                        .replaceAll("SUBST_SW_ONLY_VERSION", swOnlyVersion)
                         .replaceAll("SUBST_SW_MAJOR_VERSION", majorVersion)
                         .replaceAll("SUBST_SW_MINOR_VERSION", minorVersion)
                         .replaceAll("SUBST_SPARK_VERSION", sparkVersion)
@@ -43,6 +42,7 @@ task substitute() {
                         .replaceAll("SUBST_H2O_RELEASE_NAME", h2oMajorName)
                         .replaceAll("SUBST_H2O_BUILD_NUMBER", h2oBuild)
                         .replaceAll("SUBST_MIN_SUPPORTED_JAVA", minSupportedJavaVersion)
+                        .replaceAll("SUBST_EMR_VERSION", supportedEmrVersion)
                 file(it).write(contents, 'UTF-8')
             }
         }
