--- a/gradle.properties
+++ b/gradle.properties
@@ -15,6 +15,8 @@ mojoPipelineVersion=2.1.3
 testMojoPipeline=false
 # Disable execution of the gradle daemon
 org.gradle.daemon=false
+# Version of Terraform used in the script creating the docker image
+terraformVersion=0.12.8
 # Version of docker image used in Jenkins tests
 dockerImageVersion=20
 # Is this build nightly build
