--- a/jenkins/build.gradle
+++ b/jenkins/build.gradle
@@ -8,6 +8,7 @@ description = "Create a Docker file for jenkins tests"
 
 ext {
     outputFile = file("$projectDir//docker/regular-tests/Dockerfile")
+    terraform_download_url = "https://releases.hashicorp.com/terraform/${terraformVersion}/terraform_${terraformVersion}_linux_amd64.zip"
 }
 
 task createDockerfile(type: Dockerfile) {
@@ -24,11 +25,19 @@ task createDockerfile(type: Dockerfile) {
                 apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E298A3A825C0D65DFD57CBB651716619E084DAB9 && \\
                 add-apt-repository 'deb [arch=amd64,i386] https://cran.rstudio.com/bin/linux/ubuntu xenial/'
                 """
-    runCommand "apt-get update && apt-get install -y git npm curl zip s3cmd r-base r-base-dev libxml2-dev libssl-dev libcurl4-openssl-dev"
+    runCommand "apt-get update && apt-get install -y git npm curl zip unzip s3cmd r-base r-base-dev libxml2-dev libssl-dev libcurl4-openssl-dev"
     runCommand """\\
                 curl -sL https://deb.nodesource.com/setup_11.x | sudo -E bash - && \\
                 sudo apt-get install -y nodejs
                 """
+
+    // Install Terraform
+    runCommand """\\
+                |   curl -s ${terraform_download_url} --output terraform.zip && \\
+                |   unzip terraform.zip -d /usr/local/bin/ && \\
+                |   rm -f terraform.zip
+               """.stripMargin()
+    
     runCommand """\\
                 R -e 'install.packages("xml2", repos = "http://cran.us.r-project.org")' && \\
                 R -e 'install.packages("openssl", repos = "http://cran.us.r-project.org")' && \\
@@ -101,7 +110,6 @@ task createDockerfile(type: Dockerfile) {
 
     environmentVariable("HIVE_HOME", "/usr/hdp/2.2.9.0-3393/hive")
     runCommand "pip install awscli --upgrade --user"
-
 }
 
 def getAllFullSparkVersions() {
