[SW-1492][Spark-2.1] Switch minimal java version for Java 1.8

--- a/py/build.gradle
+++ b/py/build.gradle
@@ -299,7 +299,7 @@ def createIntegTestArgs(String integTestKind) {
             "spark.test.home=${sparkHome}",
             "spark.ext.h2o.node.log.dir=${buildDir}/h2ologs-itest-${integTestKind}/nodes",
             "spark.ext.h2o.client.log.dir=${buildDir}/h2ologs-itest-${integTestKind}/client",
-            "spark.driver.extraJavaOptions=-Dhdp.version=${hdpVersion} ${extraJVMArgs}",
+            "spark.driver.extraJavaOptions=-Dhdp.version=${hdpVersion}",
             "spark.executor.extraJavaOptions=-Dhdp.version=${hdpVersion}",
             "spark.yarn.am.extraJavaOptions=-Dhdp.version=${hdpVersion}"
     ]
