--- a/examples/build.gradle
+++ b/examples/build.gradle
@@ -77,9 +77,9 @@ integTest {
     // Pass list of jars required for testing
     systemProperty "sparkling.assembly.jar", "${configurations.sparklingWaterAssemblyJar.singleFile}"
     systemProperty "sparkling.itest.jar", "${integTestJar.archivePath}"
-    systemProperty "spark.driver.extraJavaOptions", "-Dhdp.version=${hdpVersion} ${extraJVMArgs}"
-    systemProperty "spark.yarn.am.extraJavaOptions", "-Dhdp.version=${hdpVersion} ${extraJVMArgs}"
-    systemProperty "spark.executor.extraJavaOptions", "-Dhdp.version=${hdpVersion} ${extraJVMArgs}"
+    systemProperty "spark.driver.extraJavaOptions", "-Dhdp.version=${hdpVersion}"
+    systemProperty "spark.yarn.am.extraJavaOptions", "-Dhdp.version=${hdpVersion}"
+    systemProperty "spark.executor.extraJavaOptions", "-Dhdp.version=${hdpVersion}"
 
     // Show standard out and standard error of the test JVM(s) on the console
     testLogging.showStandardStreams = true
@@ -93,8 +93,6 @@ scriptsTest {
     systemProperty "sparkling.test.log.dir", new File(project.getBuildDir(), "h2ologs-test")
     systemProperty "spark.ext.h2o.node.log.dir", new File(project.getBuildDir(), "h2ologs-stest/nodes")
     systemProperty "spark.ext.h2o.client.log.dir", new File(project.getBuildDir(), "h2ologs-stest/client")
-    systemProperty "spark.driver.extraJavaOptions", "${extraJVMArgs}"
-    systemProperty "spark.executor.extraJavaOptions", "${extraJVMArgs}"
 
     // Set sparkling water assembly jar location
     systemProperty "sparkling.assembly.jar", "${configurations.sparklingWaterAssemblyJar.singleFile}"
@@ -103,9 +101,6 @@ scriptsTest {
     // For a new JVM for each test class
     forkEvery = 1
 
-    if (!jvmArgs.isEmpty()) {
-        jvmArgs extraJVMArgs.split(" ")
-    }
     // Increase test runner memory
     maxHeapSize = "4g"
     // Working dir will be root project
