:tada:  [Gradle Release Plugin] - pre tag commit:  'RELEASE-3.26.8'.

--- a/gradle.properties
+++ b/gradle.properties
@@ -26,4 +26,4 @@ supportedSparkVersions=2.1 2.2 2.3 2.4
 # Select for which Spark version is Sparkling Water built by default
 spark=2.4
 # Sparkling Water Version
-version=3.26.8-SNAPSHOT
+version=3.26.8
