[SW-1681] Change sw version to include also patch within one h2o version

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,11 +19,9 @@ org.gradle.daemon=false
 terraformVersion=0.12.8
 # Version of docker image used in Jenkins tests
 dockerImageVersion=22
-# Is this build nightly build
-isNightlyBuild=false
 # Supported Major Spark Versions
 supportedSparkVersions=2.1 2.2 2.3 2.4
 # Select for which Spark version is Sparkling Water built by default
 spark=2.4
 # Sparkling Water Version
-version=3.28.1-SNAPSHOT
+version=3.28.1-1-SNAPSHOT
