--- a/gradle.properties
+++ b/gradle.properties
@@ -19,6 +19,8 @@ org.gradle.daemon=false
 terraformVersion=0.12.8
 # Version of docker image used in Jenkins tests
 dockerImageVersion=22
+# Is this build nightly build
+isNightlyBuild=false
 # Supported Major Spark Versions
 supportedSparkVersions=2.1 2.2 2.3 2.4
 # Select for which Spark version is Sparkling Water built by default
