[SW-1712] Ensure the rest api solution can be enabled by option

--- a/py/build.gradle
+++ b/py/build.gradle
@@ -283,6 +283,10 @@ def createUnitTestArgs() {
             "spark.ext.h2o.backend.cluster.mode=${detectBackendClusterMode()}"
     ]
 
+    if (project.hasProperty("restApiBasedClient") && project.restApiBasedClient == "true") {
+        args.add("spark.ext.h2o.rest.api.based.client=true")
+    }
+
     gradle.taskGraph.whenReady {
         if (gradle.taskGraph.hasTask(":${project.name}:hadoopSmokeTests")) {
             args.add("spark.jars=${configurations.s3deps.resolve().join(",")}")
