--- a/kubernetes/build.gradle
+++ b/kubernetes/build.gradle
@@ -32,7 +32,7 @@ task createRDockerfile(type: Dockerfile) {
                 R -e 'install.packages("sparklyr", repos = "http://cran.us.r-project.org")'
                 """
     runCommand "R -e \"install.packages('h2o', type = 'source', repos = 'http://h2o-release.s3.amazonaws.com/h2o/rel-${h2oMajorName}/${h2oBuild}/R')\""
-    copyFile("sparkling-water/rsparkling_${version}.tar.gz", "/opt/spark/R/lib/rsparkling_${version}.tar.gz")
+    copyFile("rsparkling_${version}.tar.gz", "/opt/spark/R/lib/rsparkling_${version}.tar.gz")
     runCommand "cd /opt/spark/R/lib && R CMD INSTALL rsparkling_${version}.tar.gz"
 }
 
