[SW-1725][FollowUp] Ensure tests use the original jar, not the extended jar in the REST-API-based approach"

--- a/assembly-h2o/build.gradle
+++ b/assembly-h2o/build.gradle
@@ -145,6 +145,11 @@ task cleanExtendedH2OJars(type: Delete) {
     delete(file("private/extended"))
 }
 
+task getDownlodedJarPath(){
+    doLast {
+        println(getOrDownloadOriginalJar())
+    }
+}
 /**
  * Method determining whether the h2o or h2o driver jar is available.
  * Location to the jar is returned if it's available, otherwise null is returned
